# radarEletronico

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  Kconfig  MODIFICACOES.md  QUICKSTART.md  README.md  mps2_an385.overlay  prj.conf  simulate_vehicle.py
build_tests/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  compile_commands.json  zephyr_modules.txt
build_tests/Kconfig/: Kconfig.dts  Kconfig.modules  Kconfig.sysbuild.modules  kconfig_module_dirs.cmake  kconfig_module_dirs.env
build_tests/Kconfig/boards/: Kconfig  Kconfig.defconfig  Kconfig.mps2  Kconfig.sysbuild
src/: main.c  types.h
src/threads/: camera_thread.c  display_thread.c  sensor_thread.c
src/utils/: calculations.h  plate_validator.h
tests/: CMakeLists.txt  prj.conf  test_calculations.c  test_plate_validator.c  testcase.yaml
